# crewAI

./: .gitignore  Tasks_2025-06-23T14-55-51.md
Learn_CrewAI/CreaAI学习实践指南/: CrewAI学习指南(已作废).md  CrewAI学习指南-总大纲.md  CrewAI学习指南-概述.md  CrewAI学习指南-第1章.md  CrewAI学习指南-第2章.md  CrewAI学习指南-第2章实践.md  CrewAI学习指南-第3章.md  CrewAI学习指南-第4章.md  CrewAI学习指南-第5章.md  CrewAI学习指南-第6章.md  CrewAI学习指南-第7章.md  CrewAI学习指南-第8章.md  README.md
Learn_CrewAI/ch2_practice/: README.md  pyproject.toml  report.md
Learn_CrewAI/ch2_practice/src/ch2_practice/: crew.py  main.py
Learn_CrewAI/ch2_practice/tests/: test_setup.py
